Создан новый контроллер и шаблон для отображения страницы товара

--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -9,6 +9,7 @@
 
 </head>
 <body>
+<div class="container">
 {% include 'includes/inc_menu.html' %}
 
 {% block content %}
@@ -17,7 +18,7 @@
     <footer class="pt-4 my-md-5 pt-md-5 border-top">
         {% include 'includes/inc_footer.html'%}
     </footer>
-
+</div>
 <!-- Подключите статичеcкие файлы со скриптами Bootstrap -->
 <script src="/static/js/bootstrap.bundle.min.js"></script>
 </body>
