--- a/catalog/templates/home.html
+++ b/catalog/templates/home.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+
+{% load my_tags %}
+
 {% block content %}
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
     <h1 class="display-4">Marketplace</h1>
@@ -11,7 +14,7 @@
         <div class="col-4 d-flex">
             <div class="card mb-4 box-shadow w-100">
                 <div class="card-header">
-                    <img src="{{ product.image.url }}" alt="{{ product.image }}" class="img-thumbnail">
+                    <img src="{{ product.image | media_filter }}">
 <!--                    <h4 class="my-0 font-weight-normal">{{product.name}}</h4>-->
                 </div>
                 <div class="card-body">
